--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                                 <adv.socket>http://compliance.advertise.com:8000</adv.socket>
 				<adv.domain>advcp.com</adv.domain>
 				<adv.site_name>ADVCP</adv.site_name>
-                                <adv.mongodb_host>mongodb://localhost/advcp</adv.mongodb_host>
+                                <adv.mongodb_host>mongodb://10.8.2.212/advcp</adv.mongodb_host>
 				<debug_level>1</debug_level>
 			</properties>
 		</profile>
