--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "utils": "^0.3.1",
     "process": "^0.11.2",
     "shelljs": "^0.6.0",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "recordrtc": "~5.3.4",
+    "command-line-args": "~2.1.6"
   },
   "devDependencies": {},
   "scripts": {
