--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "ADV Compliance Toolkit",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.15.0",
     "async": "^1.5.2",
+    "body-parser": "^1.15.0",
+    "casperjs": "^1.1.3",
+    "command-line-args": "~2.1.6",
+    "connect": "^3.4.1",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
@@ -22,21 +25,19 @@
     "nodemailer": "^2.2.1",
     "path": "^0.12.7",
     "pkgcloud": "^1.2.0-alpha.0",
-    "session": "^0.1.0",
+    "process": "^0.11.2",
+    "recordrtc": "~5.3.4",
     "request": "^2.69.0",
-    "connect": "^3.4.1",
+    "session": "^0.1.0",
+    "shelljs": "^0.6.0",
+    "shortid": "^2.2.6",
     "sleep": "^3.0.1",
     "socket.io": "^1.4.5",
     "stream": "^0.0.2",
     "stylus": "^0.54.2",
     "tar": "^2.2.1",
     "tar-fs": "^1.11.1",
-    "utils": "^0.3.1",
-    "process": "^0.11.2",
-    "shelljs": "^0.6.0",
-    "shortid": "^2.2.6",
-    "recordrtc": "~5.3.4",
-    "command-line-args": "~2.1.6"
+    "utils": "^0.3.1"
   },
   "devDependencies": {},
   "scripts": {
